--- a/functions/functions.ipynb
+++ b/functions/functions.ipynb
@@ -122,28 +122,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'agrs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m numbers \u001b[38;5;129;01min\u001b[39;00m agrs :\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(numbers)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mprint_numbers\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcsdc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[17], line 2\u001b[0m, in \u001b[0;36mprint_numbers\u001b[1;34m(*args)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprint_numbers\u001b[39m(\u001b[38;5;241m*\u001b[39margs):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m numbers \u001b[38;5;129;01min\u001b[39;00m \u001b[43magrs\u001b[49m :\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(numbers)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'agrs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "csdc\n"
      ]
     }
    ],
    "source": [
     "def print_numbers(*args):\n",
-    "    for numbers in agrs :\n",
+    "    for numbers in args :\n",
     "        print(numbers)\n",
     "\n",
     "print_numbers(1,2,3,4,5,6,7,8,'csdc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:ABahy\n",
+      "age:20\n",
+      "country:India\n"
+     ]
+    }
+   ],
+   "source": [
+    "### keyword argument \n",
+    "\n",
+    "def print_details(**kwargs):\n",
+    "    for key,values in kwargs.items():\n",
+    "        print(f\"{key}:{values}\")\n",
+    "print_details(name = \"ABahy\", age= \"20\", country = \"India\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  COMBINE BOTH OF THEM "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postional argument:1\n",
+      "Postional argument:2\n",
+      "Postional argument:3\n",
+      "Postional argument:4\n",
+      "Postional argument:5\n",
+      "Postional argument:6\n",
+      "Postional argument:7\n",
+      "Postional argument:8\n",
+      "Postional argument:csdc\n",
+      "name:ABahy\n",
+      "age:20\n",
+      "country:India\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_detail(*args ,**kwargs):\n",
+    "    for val in args:\n",
+    "        print(f\"Postional argument:{val}\")\n",
+    "    for key,values in kwargs.items():\n",
+    "        print(f\"{key}:{values}\")\n",
+    "print_detail(1,2,3,4,5,6,7,8,'csdc',name = \"ABahy\", age= \"20\", country = \"India\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### return statement\n",
+    "\n",
+    "def mult(a,b):\n",
+    "    return a*b\n",
+    "mult(2,7)"
    ]
   }
  ],
