--- a/loops/loops.ipynb
+++ b/loops/loops.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +117,34 @@
     "new_toppping = [\"bacon\",\"peppers\",\"pineapple\"]\n",
     "toppings.extend(new_toppping[0:2])\n",
     "print(toppings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3306866910.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    if i == char\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# W.A.P that take string as  input and counts the number of vowels in ths string\n",
+    "string = input(\"Enter the String: \")\n",
+    "stri = string.upper()\n",
+    "count = 0\n",
+    "vowel = ['A','E','I','O','U']\n",
+    "for char in string:\n",
+    "    for i in vowel:\n",
+    "        if i == char:\n",
+    "            count += 1\n",
+    "    count += 1\n",
+    "print(count)"
    ]
   }
  ],
