--- a/loops/loops.ipynb
+++ b/loops/loops.ipynb
@@ -41,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's say you have a list of pizza toppings, like [\"pepperoni\", \"mushrooms\", \"olives\", \"sausage\"]. Your task is to print each toppings in a different line individually. What would be your approach?\n",
+    "## with loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -57,8 +65,7 @@
     }
    ],
    "source": [
-    "### Let's say you have a list of pizza toppings, like [\"pepperoni\", \"mushrooms\", \"olives\", \"sausage\"]. Your task is to print each toppings in a different line individually. What would be your approach?\n",
-    "# with loop\n",
+    "\n",
     "toppings = [\"pepperoni\", \"mushrooms\", \"olives\", \"sausage\"]\n",
     "for topping in toppings:\n",
     "    print(topping)"
@@ -112,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Write a program that takes a string as input and counts the number of vowels (a, e, i, o, u) in the string using a for loop."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -125,7 +139,7 @@
     }
    ],
    "source": [
-    "#Write a program that takes a string as input and counts the number of vowels (a, e, i, o, u) in the string using a for loop.\n",
+    "\n",
     "string = input(\"Enter a sting :\")\n",
     "\n",
     "count = 0\n",
@@ -133,6 +147,15 @@
     "    if char in 'aeoiuAEIOU':\n",
     "        count +=1\n",
     "print(\"the number of string :\",count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imagine you're organizing a chess tournament 🏆. Your task is to bring together the players whose name start with 'A' or 'B' in one team, and 'C' or 'D' in another team.\n",
+    "\n",
+    "** In Python, you can nest 'for' loops to do this. Let's take a closer look at how nested loops work using our chess tournament scenario: **"
    ]
   },
   {
@@ -149,9 +172,7 @@
     }
    ],
    "source": [
-    "''' Imagine you're organizing a chess tournament 🏆. Your task is to bring together the players whose name start with 'A' or 'B' in one team, and 'C' or 'D' in another team.\n",
     "\n",
-    "In Python, you can nest 'for' loops to do this. Let's take a closer look at how nested loops work using our chess tournament scenario:'''\n",
     "tournament = [['Alice', 'Charlie'], ['Bob', 'Diana']]\n",
     "team1=[]\n",
     "team2=[]\n",
