--- a/file_handling/file_operation.ipynb
+++ b/file_handling/file_operation.ipynb
@@ -75,10 +75,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('example.txt','w') as file:\n",
+    "    file.write('Hello! here is new edited :)')\n",
+    "    file.write('new filw')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Writ a file without over writing **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt','a') as file:\n",
+    "    file.write(\" Append operation taking place \\n hey now we are adding line \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a list of line to a code "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "C:\\Users\\Admni\\AppData\\Local\\Temp\\ipykernel_13608\\3723351074.py:1: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "  lines = ['firsst line \\n ','second line /n', 'thired line \\m']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines = ['firsst line \\n ','second line /n', 'thired line \\m']"
+   ]
   }
  ],
  "metadata": {
