--- a/algorithm_fundamentals/sorting.ipynb
+++ b/algorithm_fundamentals/sorting.ipynb
@@ -51,6 +51,42 @@
    "source": [
     "##### Imagine you have a list of animals with their corresponding weights in pounds. You want to arrange the animals in ascending order based on their weight, starting from the lightest animal to the heaviest animal. For example, if you have a list of animals with the following weights: 🐘 elephant (5000 lbs), 🦒 giraffe (2000 lbs), 🦓 zebra (1000 lbs), and 🐰 rabbit (5 lbs), you want to arrange them in the following order: 🐰 rabbit, 🦓 zebra, 🦒 giraffe, 🐘 elephant."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted list acc to weight :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['elephant', 'giraffe', 'zebra', 'rabbit']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animals = [('elephant', 5000), ('giraffe', 2000), ('zebra', 1000), ('rabbit', 5)]\n",
+    "n = len(animals)\n",
+    "def animal_weight(animals):\n",
+    "    for i in range(n):\n",
+    "        for j in range(0,n-i-1):\n",
+    "            if animals[j][1] > animals[j+1][1]:\n",
+    "                animals[j], animals[j+1] = animals[j+1], animals[j]\n",
+    "sorted_animal = [animal[0] for animal in animals]                 \n",
+    "print(\"sorted list acc to weight :\")\n",
+    "sorted_animal"
+   ]
   }
  ],
  "metadata": {
