--- a/file_handling/file_operation.ipynb
+++ b/file_handling/file_operation.ipynb
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('example.txt','a') as file:\n",
-    "    file.write(\" Append operation taking place \\n hey now we are adding line \")"
+    "    file.write(\" Append operation taking place \\n hey now we are adding line  \\n \")"
    ]
   },
   {
@@ -111,21 +111,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writing a lisit of lines to file \n",
+    "lines = ['first line \\n ','second line \\n ','third line \\n ']\n",
+    "with open('example.txt','a') as file :\n",
+    "    file.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BInary file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "C:\\Users\\Admni\\AppData\\Local\\Temp\\ipykernel_13608\\3723351074.py:1: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  lines = ['firsst line \\n ','second line /n', 'thired line \\m']\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "#binary file \n",
+    "data = b'\\x00\\x01\\x02\\x03\\x04'\n",
+    "with open('example.bin','wb') as file:\n",
+    "    file.write(data)"
+   ]
   }
  ],
  "metadata": {
