--- a/numpy/new_numpy(revision).ipynb
+++ b/numpy/new_numpy(revision).ipynb
@@ -12,7 +12,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,7 +80,7 @@
               "       [ 9]])"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -83,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -108,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +172,7 @@
               "       [97]])"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -178,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,7 +205,7 @@
               "       [1., 1., 1., 1.]])"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -216,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -240,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -289,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -313,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -339,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -373,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -398,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -426,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -441,7 +450,7 @@
               "array([ 1,  2,  3, 45,  4])"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -468,13 +477,184 @@
               "array([[ 2, 34]])"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "arr[1:2 ,2:4]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Universal function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1.41421356 1.73205081 2.         2.23606798 2.44948974 8.83176087]\n"
+          ]
+        }
+      ],
+      "source": [
+        "arr = np.array([2,3,4,5,6,78])\n",
+        "## square root \n",
+        "print(np.sqrt(arr))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[7.38905610e+00 2.00855369e+01 5.45981500e+01 1.48413159e+02\n",
+            " 4.03428793e+02 7.49841700e+33]\n"
+          ]
+        }
+      ],
+      "source": [
+        "#exponential \n",
+        "print(np.exp(arr))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[ 0.90929743  0.14112001 -0.7568025  -0.95892427 -0.2794155   0.51397846]\n"
+          ]
+        }
+      ],
+      "source": [
+        "##sine\n",
+        "print(np.sin(arr))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Natural log"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0.69314718 1.09861229 1.38629436 1.60943791 1.79175947 4.35670883]\n"
+          ]
+        }
+      ],
+      "source": [
+        "## Natural log\n",
+        "print(np.log(arr))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ARray : \n",
+            " [[ 1  2  3  4]\n",
+            " [ 5  6  7  8]\n",
+            " [ 9 10 11 12]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "## array slicing and indexing\n",
+        "\n",
+        "arr = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12]])\n",
+        "print(\"ARray : \\n\",arr)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# have to put one element\n",
+        "arr[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.int64(1)"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "arr[0][0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Normalization"
       ]
     },
     {
