--- a/pandas/new_pandas.ipynb
+++ b/pandas/new_pandas.ipynb
@@ -2286,10 +2286,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "5kri3y4m6skf"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'2.2.2'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pd.__version__"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    20\n",
+              "1    60\n",
+              "2    50\n",
+              "3    70\n",
+              "4    90\n",
+              "Name: Banana, dtype: int64"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "s1 = pd.Series([10,20,30,40,50],name=\"Apples\")\n",
+        "s2 = pd.Series([20,60,50,70,90],name = \"Banana\")\n",
+        "df = pd.concat([s1,s2],axis=1)\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
